k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  namespace: my-namespace
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    name: goapp
